# vidoc

./: AGENTS.md  README.md
video-processor/: .gitignore  README.md  pyproject.toml
video-processor/docs/: architecture.md
video-processor/docs/tasks/: task-001-domain-and-use-case-skeleton.md  task-002-end-to-end-local-video-processing-mvp.md
video-processor/src/application/use_cases/: process_conference_video.py
video-processor/src/video_processor/: __init__.py  health.py
video-processor/src/video_processor/application/use_cases/: process_conference_video.py
video-processor/src/video_processor/domain/: entities.py  video.py
video-processor/src/video_processor/infrastructure/ffmpeg/: audio_extractor.py
video-processor/src/video_processor/infrastructure/vision/: opencv_slide_detector.py
video-processor/src/video_processor/infrastructure/whisper/: faster_whisper_transcriber.py
video-processor/src/video_processor/ports/: audio.py  audio_extractor_port.py  report_builder_port.py  reporting.py  slides.py  slides_change_port.py  speech.py  speech_port.py
video-processor/tests/: test_health.py  test_process_conference_video.py
video-processor/tests/application/: fakes.py  test_process_conference_video.py
