[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "video-processor"
version = "0.1.0"
description = "Video processing project scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic==2.11.3",
]

[project.optional-dependencies]
speech = [
  "faster-whisper==1.1.1",
]
slides = [
  "numpy==2.2.4",
  "opencv-python-headless==4.11.0.86",
  "scikit-image==0.25.2",
]
dev = [
  "faster-whisper==1.1.1",
  "numpy==2.2.4",
  "opencv-python-headless==4.11.0.86",
  "pytest==8.3.5",
  "pytest-cov==6.0.0",
  "ruff==0.11.2",
  "scikit-image==0.25.2",
]
test = [
  "pytest==8.3.5",
  "pytest-cov==6.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
